--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -80,7 +80,12 @@ html, body{
     padding: 5px 15px;    
 }
 
+.social-container i{
+    transition: .4s;
+}
+
 .social-container i:hover {
     color: #fff;
+    font-size: 35px;
 }
 
