--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1,91 +1,143 @@
-html, body{
+html, body {
     height: 100%;
+    background-image: url(../images/overlay.png), url(../images/bg.jpg);
+    background-repeat: repeat, no-repeat;
+    background-size: auto, 100% 100%;
+    font-size: 15pt;
 }
 
 * {
     box-sizing: border-box;
 }
 
-.left-col {
-    position: fixed;
-    width: 20%;
-    height: 100%;
-    background-color: #222629;
-}
-
-.container-img {
+.wrapped {    
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 45em;
+    margin: 0 auto;
+    padding-top: 2.2em;
 }
 
-.container-img h3, .container-img p {
-    text-align: right;
-    color: #fff;
-}
-
-.container-img h3 {
-    font-size: 18px;
-    margin: 8px 0;
-    font-weight: bold;
-}
-
-.container-img p {
-    font-size: 80%;
-    color: rgba(255, 255, 255, 0.5);
-}
-
-
-
-.container-menu li {
-    transition: .1s;
-}
-
-.container-menu li i {
-    color: #fff;
-}
-
-.container-menu li a {
-    color: #fff;
+.nav {    
     text-decoration: none;
-    font-size: 21px;
-    font-weight: bold;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;    
-    cursor: pointer;
-}
-
-.container-menu li:hover {
-    background-color: rgba(15, 15, 15, 0.8)
-}
-
-
-.social-container {
-    position: absolute;
-    width: 100%;    
-    bottom: 0;
-    left: 0;
-    padding: 10px;
+    width: 100%;
+    flex: 1 1 10%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
-.social-container a{
-    color: rgba(255, 255, 255, 0.5);
-    text-decoration: none;
-    padding: 5px 15px;    
+.icon {
+    margin: 0 1em 0 1em;
+    position: relative;
 }
 
-.social-container i{
-    transition: .4s;
+.icon i {
+    font-size: 2.5em;
+    color: rgba(255, 255, 255, 0.4);
 }
 
-.social-container i:hover {
-    color: #fff;
-    font-size: 35px;
+.icon i:hover {
+    color: rgb(255, 255, 255);
+    transition: 0.5s;    
 }
 
+.icon span {
+    background-image:url(../images/speech-bubble.png);
+    opacity: 0;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    visibility: hidden; 
+    position: absolute;
+    text-align: center;
+    font-size: 1em;
+    font-weight: 500;
+    padding: 0.6em 0 0 0;
+    color: #444444;    
+    height: 3em;
+    width: 5em;
+    top: -2.9em;       
+}
+
+#a-home:hover #span-home {
+    visibility: visible; 
+    opacity: 1;
+    transition: .5s;    
+}
+
+#a-work:hover #span-work {
+    visibility: visible; 
+    opacity: 1;
+    transition: .5s;    
+}
+
+#a-contact:hover #span-contact {
+    visibility: visible; 
+    opacity: 1;
+    transition: .5s;    
+}
+
+#a-social:hover #span-social {
+    visibility: visible; 
+    opacity: 1;
+    transition: .5s;    
+}
+
+.main {
+    background: #FFFFFF;
+    width: 100%;
+    flex: 4 1 50%;    
+}
+
+article {
+    display: none;
+}
+
+#home-panel {
+    display:flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+#home-panel h1{
+    margin: 0 0 0.5em 2.5em;
+    font-size: 2em;
+    font-weight: 600;    
+}
+
+#home-panel p{
+    margin: 0 0 0.5em 5em;
+    font-size: 1em;
+    font-weight: 300;  
+}
+
+#home-panel img {
+    height: 24em;
+}
+
+#home-panel i {
+    background-color: rgba(30, 30, 30, 0.8);
+    position: absolute;
+    top: 40%;
+    right:0;
+    font-size: 5em;
+    color: #ffffff;
+}
+
+.footer {    
+    width: 100%;
+    padding-top: 0.5em;
+    flex: 1 1 10%;   
+    position: relative;
+}
+
+.footer p {
+    color: #ffffff;
+    position: absolute;
+    left: 40%;
+    
+    
+}
