--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -10,7 +10,7 @@ html, body {
     box-sizing: border-box;
 }
 
-.wrapped {    
+.wrapped { 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,6 +20,7 @@ html, body {
     padding-top: 2.2em;
 }
 
+/* menu */
 .nav {    
     text-decoration: none;
     width: 100%;
@@ -85,19 +86,18 @@ html, body {
     transition: .5s;    
 }
 
+/* main content */
 .main {
     background: #FFFFFF;
+    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
     width: 100%;
+    height: 60%;
     flex: 4 1 50%;    
-}
-
-article {
-    display: none;
 }
 
 #home-panel {
     display:flex;
-    position: relative;
+    position: relative;    
     justify-content: space-between;
     align-items: center;    
 }
@@ -114,17 +114,34 @@ article {
     font-weight: 300;  
 }
 
-#home-panel img {
-    height: 24em;
+#home-panel img {    
+    display: block;
+    right:0;
+    height: 100%;
 }
 
 #home-panel i {
-    background-color: rgba(30, 30, 30, 0.8);
+    background-color: rgba(30, 30, 30, 0.6);
     position: absolute;
     top: 40%;
     right:0;
-    font-size: 5em;
-    color: #ffffff;
+    font-size: 4em;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+#home-panel i:hover{
+    transition: .7s;
+    background-color: rgba(30, 30, 30, 0.8);
+    color: rgba(255, 255, 255, 1);
+}
+/*Work panel*/
+#work-panel {
+    display: none;
+}
+
+/*Contact panel*/
+#contact-panel {
+    display:none;
 }
 
 .footer {    
